# myhouse24

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
config/urls/: __init__.py  account.py  adminlte.py  authentication.py  website.py
deploy/celery/: Dockerfile
deploy/nginx/: nginx.conf
deploy/web/: Dockerfile  entrypoint.sh
src/authentication/: apps.py  authentication.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
src/authentication/forms/: __init__.py
src/authentication/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_status.py  0003_alter_customuser_options.py  0004_alter_customuser_status.py  0005_alter_customuser_avatar.py  0006_alter_customuser_avatar.py
src/authentication/models/: __init__.py  custom_user.py
src/cash_box/: apps.py
src/core/utils/: http.py  (+4 more)
src/flat_owners/: apps.py  forms.py  urls.py  views.py
src/flats/: apps.py  forms.py  models.py  urls.py  views.py
src/house_owners/: apps.py  forms.py  urls.py  views.py
src/houses/: apps.py  forms.py  models.py  urls.py  views.py
src/master_call_requests/: apps.py  forms.py  models.py  urls.py  views.py
src/meter_indicators/: apps.py  forms.py  models.py  urls.py  views.py
src/payment_receipts/: apps.py
src/personal_accounts/: apps.py  forms.py  models.py  urls.py  views.py
src/system_settings/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
src/user_messages/: apps.py
src/website_management/: apps.py  forms.py  models.py  urls.py  views.py
(+739 files in other folders)
