[tool.poetry]
name = "myhouse24"
version = "0.1.0"
description = ""
authors = ["ant100pshnik <mypochtav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-recaptcha = "^4.0.0"
django-extensions = "^3.2.3"
celery = "^5.4.0"
redis = "^5.0.8"
django-ajax-datatable = "^4.5.0"
django-cleanup = "^8.1.0"
django-debug-toolbar = "^4.4.6"
openpyxl = "^3.1.5"
xlsx2html = "^0.6.2"
weasyprint = "^65.0"
six = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
